--- a/serverless.yml
+++ b/serverless.yml
@@ -1,8 +1,12 @@
-service: my-service
-
+service: serverless-poc
+frameworkVersion: "3"
 provider:
   name: aws
-  runtime: nodejs14.x
+  runtime: nodejs18.x
+
+plugins:
+  - serverless-offline # Adicione esta linha para incluir o plugin
+  - serverless-plugin-typescript
 
 functions:
   getUsers:
