--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,10 @@
     "removeComments": true,
     "sourceMap": true,
     "target": "ES2020",
-    "outDir": "lib"
+    "outDir": "lib",
+    "esModuleInterop": true
   },
-  "include": ["src/**/*.ts", "serverless.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": [
     "node_modules/**/*",
     ".serverless/**/*",
@@ -20,5 +21,8 @@
   ],
   "ts-node": {
     "require": ["tsconfig-paths/register"]
-  }
+  },
+  "types": [
+    "jest"
+  ]
 }
