--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,7 @@ provider:
 plugins:
   - serverless-offline # Adicione esta linha para incluir o plugin
   - serverless-plugin-typescript
+  - serverless-iam-roles-per-function
 
 functions:
   getUsers:
