--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@middy/http-json-body-parser": "^3.4.0",
     "aws-sdk-mock": "^5.8.0",
     "jest": "^29.6.1",
+    "serverless-appsync-plugin": "^2.3.1",
     "serverless-iam-roles-per-function": "^3.2.0",
     "ts-jest": "^29.1.1"
   },
