--- a/serverless.yml
+++ b/serverless.yml
@@ -8,6 +8,25 @@ plugins:
   - serverless-offline # Adicione esta linha para incluir o plugin
   - serverless-plugin-typescript
   - serverless-iam-roles-per-function
+  - serverless-appsync-plugin
+
+custom:
+  appSync:
+    name: appsync-users-api
+    authenticationType: AWS_IAM
+    schema: schema.graphql
+    dataSources:
+      - type: AWS_LAMBDA
+        name: lambdaDataSource
+        description: "Lambda data source"
+        config:
+          lambdaFunctionArn: arn:aws:lambda:us-east-1:875968654243:function:serverless-poc-dev-getUsers
+    mappingTemplates:
+      - dataSource: lambdaDataSource
+        type: Query
+        field: getUsers
+        request: resolvers/getUsers/request.vtl
+        response: resolvers/getUsers/response.vtl
 
 functions:
   getUsers:
