--- a/serverless.yml
+++ b/serverless.yml
@@ -11,22 +11,14 @@ plugins:
   - serverless-appsync-plugin
 
 
-appSync:
-    name: appsync-users-api
-    authenticationType: AWS_IAM
-    schema: schema.graphql
-    dataSources:
-      - type: AWS_LAMBDA
-        name: lambdaDataSource
-        description: "Lambda data source"
-        config:
-          lambdaFunctionArn: arn:aws:lambda:us-east-1:875968654243:function:serverless-poc-dev-getUsers
+custom:
+  appsync:
     mappingTemplates:
-      - dataSource: lambdaDataSource
-        type: Query
+      - type: Query
+        request: false
+        response: false
+        dataSource: myLambdaSource
         field: getUsers
-        request: resolvers/getUsers/request.vtl
-        response: resolvers/getUsers/response.vtl
 
 functions:
   getUsers:
