fix: try to fix appsync config

--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,7 @@ plugins:
 appSync:
     name: appsync-api
     authentication: AWS_IAM
+    schema: 'schema.graphql'
     resolvers:
       getUsers:
         dataSource:
